Made Database And FInished Registration with the additional UserInfo

--- a/BookOnShelfBlazor/appsettings.json
+++ b/BookOnShelfBlazor/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BookOnShelfBlazor-551b3f89-49f9-494d-b95d-81984e598cfd;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-CF7PQ6Q\\SQLEXPRESS;Database=BookOnShelfBlazor;Integrated Security=True;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
